<resources>
    <string name="app_name">Treasure Hunt</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_start_hunt">Treasure Hunt</string>


    <string name="title_activity_join_hunt">Join Hunt</string>
    <string name="enter_user_name_text">Enter Your Name: </string>
    <string name="enter_hunt_name">Enter Hunt Name: </string>
    <string name="enter_hunt_location">Enter Hunt Location: </string>

    <string name="select_team">Select Team</string>
    <string name="team_options">Treasure Hunt</string>

    <string name="title_activity_team_select">TeamSelectActivity</string>
    <string name="enter_team_name">Enter Team Name</string>
    <string name="default_team_name">Team Alpha</string>
    <string name="start_hunt">Start Game!</string>
    <string name="create_new_hunt">Create New Hunt</string>
    <string name="view_existing_hunts">View Available Hunts</string>
    <string name="hunt_name1">UCD Hunt</string>
    <string name="select_hunt">Select Hunt</string>
    <string name="title_activity_clue_display">Clue Display</string>

    <string name="show_on_map">Show on Map</string>
    <string name="take_picture_button">Take Picture</string>
    <string name="clue">Clue: </string>
    <string name="title_activity_maps">Map</string>
    <string name="delete_picture">Delete Image</string>
    <string name="save_image">Save Image</string>
    <string name="enter_clue_answer_text">Enter Your Answer:</string>

    <string name="submit_answer_button">Submit Answer</string>
    <string name="start_hunt_button">Treasure Hunt</string>
    <string name="start_hunt_button2">Start Hunt</string>
    <string name="join_hunt_button">Join Hunt</string>
    <string name="view_available_hunts_button">View Available Hunts</string>
    <string name="create_new_hunt_button">Create New Hunt</string>
    <string name="create_hunt_button">Create Hunt</string>
    <string name="select_hunt_text">Select Hunt:</string>
    <string name="login_button">Enter</string>
    <string name="enter_team_name_text">Enter Team Name:</string>
    <string name="options_button">Options</string>
    <string name="enter_team_name_edit">Enter Team Name:</string>
    <string name="title_activity_summary">Treasure Hunt</string>
    <string name="summary_text">Summary</string>
    <string name="player_text">Player: </string>
    <string name="hunt_text">Hunt: </string>
    <string name="team_text">Team: </string>
    <string name="user_score_text">Score:</string>
    <string name="test_player_name">Elliot</string>
    <string name="test_team_name">fsociety</string>
    <string name="empty">null</string>
    <string name="title_activity_location_test">LocationTestActivity</string>
    <string name="get_location_button">Get Location</string>
    <string name="latitude_text">Latitude: </string>
    <string name="longitude_text">Longitude: </string>
    <string name="delete_location_button">Delete Location</string>
    <string name="title_activity_summary_map">Summary</string>
    <string name="play_again_text">Play Again?</string>
    <string name="main_menu_text">Main Menu</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>

    <string name="clue_activity_on_back_button_message">You will lose unsaved progress</string>
    <string name="on_back_button">Are you sure?</string>
    <string name="main_activity_on_back_button_message">Do you wish to log out?</string>
    <string name="summary_activity_on_back_button_message">Are you sure you want to exit?</string>
    <string name="user_image_text">You Answered:</string>
    <string name="answer_image_text">Correct Answer Example:</string>
    <string name="image_self_check_text">Is your answer correct?</string>
    <string name="hunt_name">UCD Hunt</string>
    <string name="self_check_dialog_text">Treasure Hunt Complete!\n\nDon\'t forget to manually check your pictures!</string>
    <string name="fire">OK</string>
    <string name="location_was_correct">Location was correct!</string>
    <string name="location_incorrect">Location was incorrect!\nYou were outside the circle</string>

</resources>
