<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.sheep.electric.treasurehunt.CreateHuntActivity">

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_user_name_text"/>

    <EditText android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/enter_user_name_edit" android:padding="20dp"
        android:text="@string/test_player_name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_team_name_text"
        android:padding="10dp"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/enter_team_name_edit"
        android:padding="10dp"
        android:text="@string/test_team_name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_hunt_text"
        android:id="@+id/select_hunt_text"
        android:padding="10dp"/>

    <Spinner
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/select_hunt_spinner"
        android:padding="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_hunt_button2"
        android:id="@+id/start_hunt_button"
        android:padding="20dp"/>
</LinearLayout>
